# Entrega_M14

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Entrega_M14/: asgi.py  settings.py  urls.py  wsgi.py
